force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/NCMT_Assembly_Lookup_Detail__c.object-meta.xml
<CustomObject>
    <label>NCMT Assembly Lookup Master</label>
    <nameField>
        <label>Assembly SKey</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCMT Assembly Lookup Master</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>