force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Assembly_Labor_Cost_Unit__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Labor_Cost_Unit__c</fullName>
    <label>Assembly Labor Cost/Unit</label>
    <summarizedField>NCMT_Assembly_Lookup_Item__c.Labor_Unit_Cost__c</summarizedField>
    <summaryForeignKey>NCMT_Assembly_Lookup_Item__c.Assembly_Lookup_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>