force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Assembly_Number__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Number__c</fullName>
    <label>Assembly Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>