force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Desc__c.field-meta.xml
<CustomField>
    <fullName>Desc__c</fullName>
    <formula>Assembly_Number__c + &apos;-&apos; +  Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desc</label>
    <type>Text</type>
</CustomField>