force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Assembly Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>