force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>