force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/GSAAssemblies_Lookup_Items__c.field-meta.xml
<CustomField>
    <fullName>GSAAssemblies_Lookup_Items__c</fullName>
    <label>GSAAssemblies Lookup Items</label>
    <summaryForeignKey>NCMT_Assembly_Lookup_Item__c.Assembly_Lookup_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>