force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Installation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Installation_Cost__c</fullName>
    <label>Assembly Installation Cost/Unit</label>
    <summarizedField>NCMT_Assembly_Lookup_Item__c.Installation_Cost__c</summarizedField>
    <summaryForeignKey>NCMT_Assembly_Lookup_Item__c.Assembly_Lookup_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>