force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <defaultValue>&quot;Assemblies&quot;</defaultValue>
    <label>Item Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>