force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Labor_Hours_txt__c.field-meta.xml
<CustomField>
    <fullName>Labor_Hours_txt__c</fullName>
    <label>Total Labor hours</label>
    <summarizedField>NCMT_Assembly_Lookup_Item__c.Labor_Hours_F__c</summarizedField>
    <summaryForeignKey>NCMT_Assembly_Lookup_Item__c.Assembly_Lookup_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>