force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Level_1_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Description__c</fullName>
    <label>Level 1 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>