force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Level_6_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_6_Description__c</fullName>
    <label>Level 6 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>