force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Lvl4Desc__c.field-meta.xml
<CustomField>
    <fullName>Lvl4Desc__c</fullName>
    <formula>Level_4__c + &apos;-&apos; +  Level_4_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lvl4Desc</label>
    <type>Text</type>
</CustomField>