force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Lvl5Desc__c.field-meta.xml
<CustomField>
    <fullName>Lvl5Desc__c</fullName>
    <formula>Level_5__c + &apos;-&apos; + Level_5_Description__c</formula>
    <label>Lvl5Desc</label>
    <type>Text</type>
</CustomField>