force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Lvl6Desc__c.field-meta.xml
<CustomField>
    <fullName>Lvl6Desc__c</fullName>
    <formula>Level_6__c + &apos;-&apos; + Level_6_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lvl6Desc</label>
    <type>Text</type>
</CustomField>