force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Material_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Unit_Cost__c</fullName>
    <label>Assembly Material Cost/Unit</label>
    <summarizedField>NCMT_Assembly_Lookup_Item__c.Material_Unit_Cost__c</summarizedField>
    <summaryForeignKey>NCMT_Assembly_Lookup_Item__c.Assembly_Lookup_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>