force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Minimum_Cost__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minimum Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>