force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Total_Cost_OP__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_OP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Cost OP</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>