force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/fields/Total_Cost_OP_GSA_ASSM__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_OP_GSA_ASSM__c</fullName>
    <description>For GSA Assemblies to update total cost op from line items</description>
    <label>Total Cost OP</label>
    <summarizedField>NCMT_Assembly_Lookup_Item__c.Total_Cost_OP__c</summarizedField>
    <summaryForeignKey>NCMT_Assembly_Lookup_Item__c.Assembly_Lookup_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>