force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Level_2__c</columns>
    <columns>Level_2_Description__c</columns>
    <columns>Level_3__c</columns>
    <columns>Level_3_Description__c</columns>
    <columns>Level_4__c</columns>
    <columns>Level_4_Description__c</columns>
    <columns>Assembly_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Material_Unit_Cost__c</columns>
    <columns>Installation_Cost__c</columns>
    <columns>Unit__c</columns>
    <columns>File_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>