force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/listViews/FY2025.listView-meta.xml
<ListView>
    <fullName>FY2025</fullName>
    <columns>File_Type__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>NAME</columns>
    <columns>Level_2__c</columns>
    <columns>Level_2_Description__c</columns>
    <columns>Level_3__c</columns>
    <columns>Level_3_Description__c</columns>
    <columns>Level_4__c</columns>
    <columns>Level_4_Description__c</columns>
    <columns>Assembly_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Installation_Cost__c</columns>
    <columns>Material_Unit_Cost__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2024</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>90356</value>
    </filters>
    <label>FY-2025</label>
</ListView>