force-app/main/default/objects/NCMT_Assembly_Lookup_Detail__c/listViews/FY_2020_GSA_2020_FAC_ASMDES_xlsx.listView-meta.xml
<ListView>
    <fullName>FY_2020_GSA_2020_FAC_ASMDES_xlsx</fullName>
    <columns>NAME</columns>
    <columns>Level_2__c</columns>
    <columns>Level_2_Description__c</columns>
    <columns>Level_3__c</columns>
    <columns>Level_3_Description__c</columns>
    <columns>Level_4__c</columns>
    <columns>Level_4_Description__c</columns>
    <columns>Level_5__c</columns>
    <columns>Level_5_Description__c</columns>
    <columns>Assembly_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Installation_Cost__c</columns>
    <columns>Material_Unit_Cost__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <filters>
        <field>File_Type__c</field>
        <operation>equals</operation>
        <value>GSA_ 2020 FAC_ASMDES.xlsx</value>
    </filters>
    <label>FY-2020 GSA_ 2020 FAC_ASMDES.xlsx</label>
</ListView>